Update course and author unit tests